--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ body{
 h1{       
     background-color: blue;
     color: white;
-    font-size: 2.3rem; 
+    font-size: 30px; 
     font-family: Verdana, Geneva, Tahoma, sans-serif;    
     border: none;
     display: flex;
@@ -30,7 +30,7 @@ h1{
 h2{
     background-color: gray; 
     color: white;
-    font-size: 2rem;   
+    font-size: 25px;   
     font-family: Verdana, Geneva, Tahoma, sans-serif;    
     border: none;
     display: flex;
@@ -42,7 +42,7 @@ h2{
 h3{       
     background-color: coral;
     color:  white;
-    font-size: 2rem;
+    font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;    
     border: none;
     display: flex;
@@ -88,7 +88,7 @@ h3{
     
     color:  blueviolet;    
     text-decoration: none; 
-    font-size: 1.3rem;
+    font-size: 18px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     
                    
@@ -158,17 +158,17 @@ h3{
     }
 
     h1{
-        font-size: 3.5rem;
+        font-size: 2.5rem;
         text-align: center;
     }
 
     h2{
-        font-size: 3.5rem;
+        font-size: 2.5rem;
         text-align: center;
     }
 
     h3{
-        font-size: 3.5rem;
+        font-size: 2.5rem;
         text-align: center;
     }
 
