--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ body{
 h1{       
     background-color: blue;
     color: white;
-    font-size: 28px; 
+    font-size: 32px; 
     font-family: Verdana, Geneva, Tahoma, sans-serif;    
     border: none;
     display: flex;
@@ -30,7 +30,7 @@ h1{
 h2{
     background-color: gray; 
     color: white;
-    font-size: 25px;   
+    font-size: 30px;   
     font-family: Verdana, Geneva, Tahoma, sans-serif;    
     border: none;
     display: flex;
@@ -42,7 +42,7 @@ h2{
 h3{       
     background-color: coral;
     color:  white;
-    font-size: 20px;
+    font-size: 28px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;    
     border: none;
     display: flex;
@@ -88,7 +88,7 @@ h3{
     
     color:  blueviolet;    
     text-decoration: none; 
-    font-size: 18px;
+    font-size: 25px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     
                    
@@ -104,6 +104,40 @@ h3{
     margin-right: 5vw;*/ 
                   
 }
+
+
+
+@media (max-width: 800px) {
+    body{
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    }
+
+    .baner{     
+        flex-direction: column;
+        gap: 10px;
+    } 
+
+}
+
+@media (max-width: 500px) {
+    body{
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    }
+
+    .baner{     
+        flex-direction: column;
+        gap: 10px;
+    } 
+
+}
+
+
 
 
 /*@media (max-width: 800px) {
