--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,216 +1,532 @@
 *{
     padding: 0;
-    margin: 0;
-    box-sizing: 0;
+    margin: 0; 
+    box-sizing: 0;   
+    
 }
 
 body{
     margin-left: 40px;
     margin-right: 40px;
     margin-top: 60px;
-    margin-bottom: 40px;
-       
+    margin-bottom: 40px;   
 }
 
-h1{        
+
+
+h1{       
     background-color: blue;
     color: white;
-    font-size: 2.3rem;
+    font-size: 28px; 
     font-family: Verdana, Geneva, Tahoma, sans-serif;    
     border: none;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+
 }
 
-h2{       
-    background-color: gray;
+h2{
+    background-color: gray; 
     color: white;
-    font-size: 2rem; 
+    font-size: 25px;   
     font-family: Verdana, Geneva, Tahoma, sans-serif;    
     border: none;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
-h3{         
+h3{       
     background-color: coral;
-    color: white;
-    font-size: 2rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;         
+    color:  white;
+    font-size: 25px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;    
     border: none;
     display: flex;
     align-items: center;
-    justify-content: center;  
-
+    justify-content: center;
+    text-align: center;           
 }
 
-h4{
-    font-size: 2rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bold;
-    text-align: center;
-}
 
-h5{
-    font-size: 2rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bold;
-    text-align: center;
-}
+/*.baner{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);   
+    margin-top: 3rem;     
+     gap: 2rem;   
+    display: flex;
+    justify-content: space-between;
+    align-items: center;  
+           
+}*/
 
-p{
-    font-size: 1.5rem;
-    color: black;
-    width: 95%;
-    text-align: justify;    
-    margin-left: auto;
-    margin-right: auto;
-    text-indent: 4rem;
-}
-
-.menuLi{ 
-    font-size: 2vw;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
-    color: blueviolet;    
-    text-decoration: none; 
-       
-                
-}
-
-.menuUl{
-    text-align: center;  
-    list-style-type: none;
-              
+.baner{
+    display: flex;
+    flex-direction: row;    
+    justify-content: space-evenly;
+    align-items: center;    
     
+}
+
+.baner2{
+    border: 3px solid white;    
+    height: 16.5rem;
+    width: 30rem;
+    margin: 0.7rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.menuLi{   
+    
+    color:  blueviolet;    
+    text-decoration: none; 
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+                   
+} 
+
+
+.menuUl{  
+    list-style-type: none;
+    text-align: center;
+    /*display: flex;
+    justify-content: space-between;
+    margin-left: 5vw;
+    margin-right: 5vw;*/ 
+                  
+}
+
+*{
+    padding: 0;
+    margin: 0; 
+    box-sizing: 0;   
+    
+}
+
+body{
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 60px;
+    margin-bottom: 40px;   
+}
+
+
+
+h1{       
+    background-color: blue;
+    color: white;
+    font-size: 28px; 
+    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+}
+
+h2{
+    background-color: gray; 
+    color: white;
+    font-size: 25px;   
+    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+h3{       
+    background-color: coral;
+    color:  white;
+    font-size: 25px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;           
+}
+
+
+/*.baner{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);   
+    margin-top: 3rem;     
+     gap: 2rem;   
+    display: flex;
+    justify-content: space-between;
+    align-items: center;  
+           
+}*/
+
+.baner{
+    display: flex;
+    flex-direction: row;    
+    justify-content: space-evenly;
+    align-items: center;    
+    
+}
+
+.baner2{
+    border: 3px solid white;    
+    height: 16.5rem;
+    width: 30rem;
+    margin: 0.7rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.menuLi{   
+    
+    color:  blueviolet;    
+    text-decoration: none; 
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+                   
+} 
+
+
+.menuUl{  
+    list-style-type: none;
+    text-align: center;
+    /*display: flex;
+    justify-content: space-between;
+    margin-left: 5vw;
+    margin-right: 5vw;*/ 
+                  
 }
 
 .sair{
-    font-size: 2.5rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    font-size: 25px;
     text-align: center;
-    
 }
+    
+
+
+
+/*@media (max-width: 800px) {
+    body{
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    }
+
+    .baner{     
+        flex-direction: column;
+        gap: 10px;
+    } 
+
+}
+
+@media (max-width: 500px) {
+    body{
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    }
+
+    .baner{     
+        flex-direction: column;
+        gap: 10px;
+    } 
+
+}*/
+
+
 
 
 @media (max-width: 800px) {
     body{
-        margin-left: 10px;
-        margin-right: 10px;
-        margin-top: 20px;
-        margin-bottom: 20px;
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     }
 
     h1{
-        font-size: 3.5rem;
+        font-size: 37px;
         text-align: center;
     }
 
     h2{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
 
     h3{
-        font-size: 3.5rem;
-        text-align: center;
-    }
-
-    h4{
-        font-size: 3.5rem;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: bold;
-        text-align: center;
-    } 
-
-    h5{
-        font-size: 3rem;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: bold;
+        font-size: 35px;
         text-align: center;
     }
 
     .menuLi{
-        font-size: 3.5rem;
-        text-align: center;                
+        font-size: 30px;
+        text-align: center;
+
     }
+
+    .baner{     
+        flex-direction: column;
+        gap: 20px;
+    } 
     
-    p{
-        font-size: 2.5rem;
-        text-align: justify;
-        width: 85%;
-        margin-left: auto;
-        margin-right: auto;
-        text-indent: 3.5rem;      
-    }
+    .baner2{
+    border: 0px solid white;    
+    height: 30rem;
+    width: 90%;    
+
+    } 
     
     .sair{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
-
-
+    
+    
 }
 
 
 @media (max-width: 500px) {
     body{
-        margin-left: 10px;
-        margin-right: 10px;
-        margin-top: 20px;
-        margin-bottom: 20px;
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     }
 
     h1{
-        font-size: 3.5rem;
+        font-size: 37px;
         text-align: center;
     }
 
     h2{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
 
     h3{
-        font-size: 3.5rem;
-        text-align: center;
-    }
-
-    h4{
-        font-size: 2rem;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: bold;
-        text-align: center;
-    } 
-
-    h5{
-        font-size: 3rem;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: bold;
+        font-size: 35px;
         text-align: center;
     }
 
     .menuLi{
-        font-size: 3.5rem;
-        text-align: center;                
-    }
-    
-    p{
-        font-size: 2.5rem;
-        text-align: justify;
-        width: 85%;
-        margin-left: auto;
-        margin-right: auto;
-        text-indent: 3.5rem;       
-    }
-
-    
-    .sair{
-        font-size: 3.5rem;
+        font-size: 30px;
         text-align: center;
     }
 
+    .baner{     
+        flex-direction: column;
+        gap: 20px;
+        
+    } 
+    
+    .baner2{
+    border: 0px solid white;    
+    height: 30rem;
+    width: 90%;    
 
+    }  
+    
+    .sair{
+        font-size: 35px;
+        text-align: center;
+    }
+    
+    
+}
+     
+       
+    
+
+
+
+
+
+
+
+
+
+
+/*.img{
+    border-radius: 50%;
+    border: none;
+}*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*@media (max-width: 800px) {
+    body{
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    }
+
+    .baner{     
+        flex-direction: column;
+        gap: 10px;
+    } 
 
 }
+
+@media (max-width: 500px) {
+    body{
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    }
+
+    .baner{     
+        flex-direction: column;
+        gap: 10px;
+    } 
+
+}*/
+
+
+
+
+@media (max-width: 800px) {
+    body{
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    }
+
+    h1{
+        font-size: 37px;
+        text-align: center;
+    }
+
+    h2{
+        font-size: 35px;
+        text-align: center;
+    }
+
+    h3{
+        font-size: 35px;
+        text-align: center;
+    }
+
+    .menuLi{
+        font-size: 30px;
+        text-align: center;
+
+    }
+
+    .baner{     
+        flex-direction: column;
+        gap: 20px;
+    } 
+    
+    .baner2{
+    border: 0px solid white;    
+    height: 30rem;
+    width: 90%;    
+
+    }  
+    
+}
+
+
+@media (max-width: 500px) {
+    body{
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    }
+
+    h1{
+        font-size: 37px;
+        text-align: center;
+    }
+
+    h2{
+        font-size: 35px;
+        text-align: center;
+    }
+
+    h3{
+        font-size: 35px;
+        text-align: center;
+    }
+
+    .menuLi{
+        font-size: 30px;
+        text-align: center;
+    }
+
+    .baner{     
+        flex-direction: column;
+        gap: 20px;
+        
+    } 
+    
+    .baner2{
+    border: 0px solid white;    
+    height: 30rem;
+    width: 90%;    
+
+    }   
+    
+}
+     
+       
+    
+
+
+
+
+
+
+
+
+
+
+/*.img{
+    border-radius: 50%;
+    border: none;
+}*/
+
+
+
+
+
+
+
+
+
+
+
