--- a/css/curiosidade.css
+++ b/css/curiosidade.css
@@ -1,240 +1,214 @@
 *{
     padding: 0;
-    margin: 0; 
-    box-sizing: 0;   
-    
+    margin: 0;
+    box-sizing: 0;
 }
 
 body{
     margin-left: 40px;
     margin-right: 40px;
     margin-top: 60px;
-    margin-bottom: 40px;   
+    margin-bottom: 40px;
+       
 }
 
-
-
-h1{       
+h1{        
     background-color: blue;
     color: white;
-    font-size: 2.3rem; 
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    font-size: 28px;
+    font-family: Arial, Helvetica, sans-serif;    
     border: none;
     display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
-
 }
 
-h2{
-    background-color: gray; 
+h2{       
+    background-color: gray;
     color: white;
-    font-size: 2rem;   
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    font-size: 25px; 
+    font-family: Arial, Helvetica, sans-serif;   
     border: none;
     display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
 }
 
-h3{       
+h3{         
     background-color: coral;
-    color:  white;
-    font-size: 2rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    color: white;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;         
     border: none;
     display: flex;
     align-items: center;
-    justify-content: center;
-    text-align: center;           
-}
-
-
-/*.baner{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);   
-    margin-top: 3rem;     
-     gap: 2rem;   
-    display: flex;
-    justify-content: space-between;
-    align-items: center;  
-           
-}*/
-
-.baner{
-    display: flex;
-    flex-direction: row;    
-    justify-content: space-evenly;
-    align-items: center;    
-    
-}
-
-.baner2{
-    border: 3px solid white;    
-    height: 16.5rem;
-    width: 30rem;
-    margin: 0.7rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: center;  
 
 }
 
-.menuLi{   
-    
-    color:  blueviolet;    
-    text-decoration: none; 
-    font-size: 1.3rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-                   
-} 
-
-
-.menuUl{  
-    list-style-type: none;
+h4{
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
     text-align: center;
-    /*display: flex;
-    justify-content: space-between;
-    margin-left: 5vw;
-    margin-right: 5vw;*/ 
-                  
+}
+
+h5{
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-align: center;
+}
+
+p{
+    font-size: 20px;
+    color: black;
+    width: 95%;
+    text-align: justify;    
+    margin-left: auto;
+    margin-right: auto;
+    text-indent: 4rem;
+}
+
+.menuLi{ 
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;   
+    color: blueviolet;    
+    text-decoration: none; 
+       
+                
+}
+
+.menuUl{
+    text-align: center;  
+    list-style-type: none;
+              
+    
 }
 
 .sair{
-    font-size: 2.5rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;    
     text-align: center;
     
 }
-
-
-
-
 
 
 @media (max-width: 800px) {
     body{
-    margin-left: 4px;
-    margin-right: 4px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     h1{
-        font-size: 3.5rem;
+        font: size 37px;;
         text-align: center;
     }
 
     h2{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
 
     h3{
-        font-size: 3.5rem;
+        font-size: 35px;
+        text-align: center;
+    }
+
+    h4{
+        font-size: 35px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
+        text-align: center;
+    } 
+
+    h5{
+        font-size: 35px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
         text-align: center;
     }
 
     .menuLi{
-        font-size: 3.5rem;
-        text-align: center;
-
+        font-size: 30px;
+        text-align: center;                
     }
-
-    .baner{     
-        flex-direction: column;
-    } 
     
-    .baner2{
-    border: 0px solid white;    
-    height: 30rem;
-    width: 90%;    
-
+    p{
+        font-size: 30px;
+        text-align: justify;
+        width: 85%;
+        margin-left: auto;
+        margin-right: auto;
+        text-indent: 3.5rem;      
     }
     
     .sair{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
-    
+
+
 }
 
 
 @media (max-width: 500px) {
     body{
-    margin-left: 4px;
-    margin-right: 4px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     h1{
-        font-size: 3.5rem;
+        font: size 37px;;
         text-align: center;
     }
 
     h2{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
 
     h3{
-        font-size: 3.5rem;
+        font-size: 35px;
+        text-align: center;
+    }
+
+    h4{
+        font-size: 35px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
+        text-align: center;
+    } 
+
+    h5{
+        font-size: 35px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
         text-align: center;
     }
 
     .menuLi{
-        font-size: 3.5rem;
-        text-align: center;
+        font-size: 30px;
+        text-align: center;                
     }
-
-    .baner{     
-        flex-direction: column;
-    } 
     
-    .baner2{
-    border: 0px solid white;    
-    height: 30rem;
-    width: 90%;    
-
+    p{
+        font-size: 30px;
+        text-align: justify;
+        width: 85%;
+        margin-left: auto;
+        margin-right: auto;
+        text-indent: 3.5rem;      
     }
     
     .sair{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
-    
+
+
 }
-     
-       
-    
-
-
-
-
-
-
-
-
-
-
-/*.img{
-    border-radius: 50%;
-    border: none;
-}*/
-
-
-
-
-
-
-
-
-
-
-
