--- a/css/formacaoAcademica.css
+++ b/css/formacaoAcademica.css
@@ -15,8 +15,8 @@ body{
 h1{        
     background-color: blue;
     color: white;
-    font-size: 2.3rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    font-size: 28px;
+    font-family: Arial, Helvetica, sans-serif;    
     border: none;
     display: flex;
     align-items: center;
@@ -26,8 +26,8 @@ h1{
 h2{       
     background-color: gray;
     color: white;
-    font-size: 2rem; 
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    font-size: 25px; 
+    font-family: Arial, Helvetica, sans-serif;   
     border: none;
     display: flex;
     align-items: center;
@@ -37,8 +37,8 @@ h2{
 h3{         
     background-color: coral;
     color: white;
-    font-size: 2rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;         
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;         
     border: none;
     display: flex;
     align-items: center;
@@ -47,21 +47,21 @@ h3{
 }
 
 h4{
-    font-size: 2rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
 }
 
 h5{
-    font-size: 2rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
 }
 
 p{
-    font-size: 1.5rem;
+    font-size: 20px;
     color: black;
     width: 95%;
     text-align: justify;    
@@ -71,8 +71,8 @@ p{
 }
 
 .menuLi{ 
-    font-size: 2vw;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;   
     color: blueviolet;    
     text-decoration: none; 
        
@@ -87,8 +87,8 @@ p{
 }
 
 .sair{
-    font-size: 2.5rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;    
     text-align: center;
     
 }
@@ -103,41 +103,41 @@ p{
     }
 
     h1{
-        font-size: 3.5rem;
+        font: size 37px;;
         text-align: center;
     }
 
     h2{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
 
     h3{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
 
     h4{
-        font-size: 3.5rem;
+        font-size: 35px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-weight: bold;
         text-align: center;
     } 
 
     h5{
-        font-size: 3rem;
+        font-size: 35px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-weight: bold;
         text-align: center;
     }
 
     .menuLi{
-        font-size: 3.5rem;
+        font-size: 30px;
         text-align: center;                
     }
     
     p{
-        font-size: 2.5rem;
+        font-size: 30px;
         text-align: justify;
         width: 85%;
         margin-left: auto;
@@ -146,7 +146,7 @@ p{
     }
     
     .sair{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
 
@@ -163,54 +163,52 @@ p{
     }
 
     h1{
-        font-size: 3.5rem;
+        font: size 37px;;
         text-align: center;
     }
 
     h2{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
 
     h3{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
 
     h4{
-        font-size: 2rem;
+        font-size: 35px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-weight: bold;
         text-align: center;
     } 
 
     h5{
-        font-size: 3rem;
+        font-size: 35px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-weight: bold;
         text-align: center;
     }
 
     .menuLi{
-        font-size: 3.5rem;
+        font-size: 30px;
         text-align: center;                
     }
     
     p{
-        font-size: 2.5rem;
+        font-size: 30px;
         text-align: justify;
         width: 85%;
         margin-left: auto;
         margin-right: auto;
-        text-indent: 3.5rem;       
+        text-indent: 3.5rem;      
     }
-
     
     .sair{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
-
 
 
 }
