--- a/css/videoApresentacao.css
+++ b/css/videoApresentacao.css
@@ -12,46 +12,87 @@ body{
        
 }
 
-h1{
+h1{        
     background-color: blue;
     color: white;
-    font-size: 2.3rem;      
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-
-}
-
-h2{
-    background-color: gray;
-    color: white;
-    font-size: 2rem;  
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-h3{       
-    background-color: coral;
-    color:  white;
-    font-size: 2rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;   
+    font-size: 28px;
+    font-family: Arial, Helvetica, sans-serif;    
     border: none;
     display: flex;
     align-items: center;
-    justify-content: center;           
+    justify-content: center;
 }
 
+h2{       
+    background-color: gray;
+    color: white;
+    font-size: 25px; 
+    font-family: Arial, Helvetica, sans-serif;   
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+h3{         
+    background-color: coral;
+    color: white;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;         
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+
+}
+
+h4{
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-align: center;
+}
+
+h5{
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-align: center;
+}
+
+p{
+    font-size: 20px;
+    color: black;
+    width: 95%;
+    text-align: justify;    
+    margin-left: auto;
+    margin-right: auto;
+    text-indent: 4rem;
+}
+
+.menuLi{ 
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;   
+    color: blueviolet;    
+    text-decoration: none; 
+       
+                
+}
+
+.menuUl{
+    text-align: center;  
+    list-style-type: none;
+              
+    
+}
 
 .sair{
-    font-size: 2rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;    
-    text-align: center;   
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;    
+    text-align: center;
+    
 }
+
 
 .video{
     width: 250px;
@@ -67,37 +108,68 @@ h3{
 }
 
 
+
+
+
 @media (max-width: 800px) {
     body{
-    margin-left: 4px;
-    margin-right: 4px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     h1{
-        font-size: 3.5rem;
+        font: size 37px;;
         text-align: center;
     }
 
     h2{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
 
     h3{
-        font-size: 3.5rem;
+        font-size: 35px;
+        text-align: center;
+    }
+
+    h4{
+        font-size: 35px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
+        text-align: center;
+    } 
+
+    h5{
+        font-size: 35px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .menuLi{
+        font-size: 30px;
+        text-align: center;                
+    }
+    
+    p{
+        font-size: 30px;
+        text-align: justify;
+        width: 85%;
+        margin-left: auto;
+        margin-right: auto;
+        text-indent: 3.5rem;      
+    }
+    
+    .sair{
+        font-size: 35px;
         text-align: center;
     }
 
     .video{
         width: 80%;
         height: 700px;
-    }
-
-    .sair{
-        font-size: 3.5rem;
-        text-align: center;
     }
 
 
@@ -106,24 +178,57 @@ h3{
 
 @media (max-width: 500px) {
     body{
-    margin-left: 4px;
-    margin-right: 4px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     h1{
-        font-size: 3.5rem;
+        font: size 37px;;
         text-align: center;
     }
 
     h2{
-        font-size: 3.5rem;
+        font-size: 35px;
         text-align: center;
     }
 
     h3{
-        font-size: 3.5rem;
+        font-size: 35px;
+        text-align: center;
+    }
+
+    h4{
+        font-size: 35px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
+        text-align: center;
+    } 
+
+    h5{
+        font-size: 35px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .menuLi{
+        font-size: 30px;
+        text-align: center;                
+    }
+    
+    p{
+        font-size: 30px;
+        text-align: justify;
+        width: 85%;
+        margin-left: auto;
+        margin-right: auto;
+        text-indent: 3.5rem;      
+    }
+    
+    .sair{
+        font-size: 35px;
         text-align: center;
     }
 
@@ -132,14 +237,8 @@ h3{
         height: 700px;
     }
 
-    .sair{
-        font-size: 3.5rem;
-        text-align: center;
-    }
-
-
-
 }
+
 
 
 
