--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@ h1{
     background-color: blue;
     color: white;
     font-size: 28px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif   
+    font-family: Verdana, Geneva, Tahoma, sans-serif;  
     border: none;
     display: flex;
     align-items: center;
