--- a/css/index.css
+++ b/css/index.css
@@ -126,7 +126,7 @@ p{
     }
 
     h1{
-        font: size 42px;;
+        font: size 42px;
         text-align: center;
     }
 
@@ -193,7 +193,7 @@ p{
     }
 
     h1{
-        font: size 42px;;
+        font: size 42px;
         text-align: center;
     }
 
