--- a/css/videoApresentacao.css
+++ b/css/videoApresentacao.css
@@ -15,8 +15,8 @@ body{
 h1{        
     background-color: blue;
     color: white;
-    font-size: 28px;
-    font-family: Arial, Helvetica, sans-serif;    
+    font-size: 30px;
+    font-family: inherit;    
     border: none;
     display: flex;
     align-items: center;
@@ -27,7 +27,7 @@ h2{
     background-color: gray;
     color: white;
     font-size: 25px; 
-    font-family: Arial, Helvetica, sans-serif;   
+    font-family: inherit;   
     border: none;
     display: flex;
     align-items: center;
@@ -38,7 +38,7 @@ h3{
     background-color: coral;
     color: white;
     font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;         
+    font-family: inherit;          
     border: none;
     display: flex;
     align-items: center;
@@ -48,20 +48,21 @@ h3{
 
 h4{
     font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: inherit; 
     font-weight: bold;
     text-align: center;
 }
 
 h5{
     font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: inherit; 
     font-weight: bold;
     text-align: center;
 }
 
 p{
     font-size: 20px;
+    font-family: inherit; 
     color: black;
     width: 95%;
     text-align: justify;    
@@ -72,7 +73,7 @@ p{
 
 .menuLi{ 
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;   
+    font-family: inherit;   
     color: blueviolet;    
     text-decoration: none; 
        
@@ -88,11 +89,10 @@ p{
 
 .sair{
     font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;    
+    font-family: inherit;     
     text-align: center;
     
 }
-
 
 .video{
     width: 250px;
@@ -109,8 +109,6 @@ p{
 
 
 
-
-
 @media (max-width: 800px) {
     body{
         margin-left: 10px;
@@ -120,7 +118,7 @@ p{
     }
 
     h1{
-        font: size 37px;;
+        font-size: 40px;
         text-align: center;
     }
 
@@ -136,15 +134,11 @@ p{
 
     h4{
         font-size: 35px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: bold;
         text-align: center;
     } 
 
     h5{
-        font-size: 35px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: bold;
+        font-size: 35px;        
         text-align: center;
     }
 
@@ -156,10 +150,7 @@ p{
     p{
         font-size: 30px;
         text-align: justify;
-        width: 85%;
-        margin-left: auto;
-        margin-right: auto;
-        text-indent: 3.5rem;      
+            
     }
     
     .sair{
@@ -171,7 +162,6 @@ p{
         width: 80%;
         height: 700px;
     }
-
 
 }
 
@@ -185,7 +175,7 @@ p{
     }
 
     h1{
-        font: size 37px;;
+        font-size: 40px;
         text-align: center;
     }
 
@@ -201,15 +191,11 @@ p{
 
     h4{
         font-size: 35px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: bold;
         text-align: center;
     } 
 
     h5{
-        font-size: 35px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: bold;
+        font-size: 35px;        
         text-align: center;
     }
 
@@ -221,10 +207,7 @@ p{
     p{
         font-size: 30px;
         text-align: justify;
-        width: 85%;
-        margin-left: auto;
-        margin-right: auto;
-        text-indent: 3.5rem;      
+            
     }
     
     .sair{
@@ -238,6 +221,9 @@ p{
     }
 
 }
+
+
+
 
 
 
